# MachineGraphics

./: gl.7z
src/: CMakeLists.txt
src/Lesson1/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  geometryengine.cpp  geometryengine.h  main.cpp
src/Lesson1/OldProject/: TriangleWindow.cpp
src/Lesson1_1/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  geometryengine.cpp  main.cpp
src/Lesson1_1/Shaders/: fshader.glsl  vshader.glsl
